--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -35,7 +35,7 @@ a:hover {
 
 header#cabecalho img#icone {
     position: absolute;
-    left: 780px;
+    left: 700px;
     top: 70px;
 }
 
@@ -134,14 +134,14 @@ nav#menu a:hover {
 
 section#corpo {
     display: block;
-    width: 500px;
+    width: 400px;
     float: left;
     border-right: 1px solid #606060;
     padding-right: 20px;
 }
 
 article#noticia-principal h2 {
-    font-size: 12pt;
+    font-size: 13pt;
     color: #606060;
     background-color: #dddddd;
     padding: 5px 0px 5px 10px;
@@ -215,8 +215,26 @@ table#tabelaspec caption span {
 
 aside#lateral {
     display: block;
-    width: 100px;
+    width: 350px;
     float: right;
+    background-color: #dddddd;
+    padding: 10px;
+    margin: 4px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+aside#lateral h1 {
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;
+}
+
+aside#lateral h2 {
+    background-color: #606060;
+    font-size: 13pt;
+    color: #ffffff;
+    padding: 5px;
 }
 
 footer#rodape {
