--- a/projeto-glass-html5/_css/specs.css
+++ b/projeto-glass-html5/_css/specs.css
@@ -9,4 +9,9 @@ iframe#frame-spec {
     width: 300px;
     height: 280px;
     border: none;
+    overflow: hidden;
+}
+
+iframe#frame-spec::-webkit-scrollbar {
+    display: none;
 }
