--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -213,6 +213,10 @@ table#tabelaspec caption span {
     margin-top: 10px;
 }
 
+video {
+    width: 400px;
+}
+
 aside#lateral {
     display: block;
     width: 350px;
@@ -235,6 +239,14 @@ aside#lateral h2 {
     font-size: 13pt;
     color: #ffffff;
     padding: 5px;
+    margin-bottom: 0px;
+}
+
+aside video {
+    margin: 0px;
+    padding: 0px;
+    width: 350px;
+    height: 196px;
 }
 
 footer#rodape {
